# some_assembly_required

./: Cargo.toml  Trunk.toml  index.html
docs/: coscon_toy_assembly-9607092ef7a8eea3.js  coscon_toy_assembly-9607092ef7a8eea3_bg.wasm  index.html  some_assembly_required-36bf52a92dbec753.js  some_assembly_required-36bf52a92dbec753_bg.wasm  some_assembly_required-484df25aeb20465.js  some_assembly_required-484df25aeb20465_bg.wasm  some_assembly_required-4d1afd76f8e87003.js  some_assembly_required-4d1afd76f8e87003_bg.wasm  some_assembly_required-824b778ca0dcf42e.js  some_assembly_required-824b778ca0dcf42e_bg.wasm  some_assembly_required-a94da85b9279a62e.js  some_assembly_required-a94da85b9279a62e_bg.wasm  some_assembly_required-d6f80fdafb6048fb.js  some_assembly_required-d6f80fdafb6048fb_bg.wasm
src/: ast.rs  main.rs  parser.lalrpop  simulator.rs
