[package]
name = "coscon_toy_assembly"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = {version = "0.19", features = ["lexer"]}
regex = "1"
avalanche = {git = "https://github.com/DJankauskas/avalanche"}
avalanche-web = {git = "https://github.com/DJankauskas/avalanche"}
web-sys = "0.3"

[build-dependencies]
lalrpop = "0.19.7"